# pystand

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  pystand.py
